Fixed framework tests